# mechajira

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.claude/skills/finish-work/: SKILL.md
.claude/skills/work-on/: README.md  SKILL.md
src/: adf.rs  config.rs  jira.rs  main.rs  output.rs  scout.rs  session.rs
