[package]
name = "jplan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jplan"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
dialoguer = "0.11"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"
dirs = "5"
